--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,14 @@ edition = "2024"
 [dependencies]
 base64 = "0.22.1"
 chrono = "0.4.41"
-clap = { version = "4.5", features = ["derive"] }
+clap = { version = "4.5", default-features = false, features = ["std", "derive"] }
 hex = "0.4.3"
-reqwest = { version = "0.12.28", features = ["blocking"] }
+reqwest = { version = "0.12.28", default-features = false, features = ["blocking"] }
 roxmltree = "0.21.1"
 serde = "1.0.219"
 serde_derive = "1.0.219"
 serde_json = "1.0.143"
 sha2 = "0.10.9"
-url = "2.5"
-uuid = { version = "1.0", features = ["v4"] }
 x509-cert = "0.2.5"
 zeroize = { version = "1", features = ["zeroize_derive", "serde"] }
 zip = { version = "5.1.1", default-features = false, features = ["deflate"] }
